[tool.poetry]
name = "fast-mlflow"
version = "0.1.0"
description = "MLflow starter setup kit + utils."
authors = ["Wenceslao Villegas <villegaswences@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mlflow = "^1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
